--- a/frontend/src/components/MenuSection.module.css
+++ b/frontend/src/components/MenuSection.module.css
@@ -16,7 +16,7 @@
 .menuitemcontainer {
   display: flex;
   flex-direction: row;
-  max-width: 1/3vw;
+  max-width: 80%;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: space-evenly;
@@ -27,8 +27,8 @@
   font-size: 36px;
   text-align: center;
   color: #bf9515;
-  letter-spacing: 0.15px;
-  margin: 0;
+  letter-spacing: 0.20px;
+  margin: 10px;
   padding: 0;
 }
 
@@ -37,9 +37,3 @@
   margin-bottom: 2rem; 
 }
 
-.dots {
-  letter-spacing: 5px;
-  overflow: hidden;
-  color: white;
-  font-family: "Open Sans", sans-serif;
-}
